--- a/_data/fiscalyears.yml
+++ b/_data/fiscalyears.yml
@@ -1,4 +1,6 @@
-- fy_ad: '2015'
-  fy_jc: '平成 27 年度'
-- fy_ad: '2014'
-  fy_jc: '平成 26 年度'
+- ad: '2015'
+  jc: '平成 27 年度'
+  selected: selected
+- ad: '2014'
+  jc: '平成 26 年度'
+  selected: selected
