--- a/_data/categorytypes.yml
+++ b/_data/categorytypes.yml
@@ -2,101 +2,101 @@
   text: '使いみち'
   selected: selected
   config:
-    '1': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }
-    '2': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '3': { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }
-    '4': { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#D33673' }
-    '5': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03' }
-    '6': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '7': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '8': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '9': { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }
-    '10': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '11': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }
-    '12': { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }
-    '13': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
+    { id: '1', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }}
+    { id: '2', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '3', data: { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }}
+    { id: '4', data: { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03' }}
+    { id: '6', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '7', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '8', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '9', data: { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '10', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '11', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '12', data: { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
 - id: kanagawaken_kawasakishi_budget
   text: '款・項（財政法上の分類）'
   selected:
   config:
-    '1': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }
-    '1-1': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }
-    '2': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-2': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-3': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-4': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-5': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-6': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-7': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-8': { icon: 'icons/research.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-9': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '2-10': { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }
-    '3': { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }
-    '3-11': { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }
-    '4': { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#D33673' }
-    '4-12': { icon: 'icons/pre-school.svg', color: '#C75746', bcolor: '#4E6D00' }
-    '4-13': { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#4E6D00' }
-    '5': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03' }
-    '5-14': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03'  }
-    '5-15': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03'  }
-    '5-16': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-17': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-18': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-19': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-20': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-21': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-22': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-23': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-24': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-25': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '5-26': { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }
-    '6': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '6-27': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '6-28': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '6-29': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '6-30': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '6-31': { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }
-    '7': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '7-32': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '7-33': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '7-34': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '7-35': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '7-36': { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }
-    '8': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-37': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-38': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-39': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-40': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-41': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-42': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-43': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '8-44': { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }
-    '9': { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }
-    '9-45': { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }
-    '9-46': { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }
-    '10': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '10-47': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '10-48': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '10-49': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '10-50': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '10-51': { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }
-    '11': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }
-    '11-52': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }
-    '11-53': { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }
-    '12': { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }
-    '12-54': { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }
-    '13': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-55': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-56': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-57': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-58': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-59': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-60': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-61': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '13-62': { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }
-    '14': { icon: 'icons/money.svg', color: '#C75746', bcolor: '#790586' }
-    '14-63': { icon: 'icons/money.svg', color: '#C75746', bcolor: '#790586' }
-    '15': { icon: 'icons/EC.svg', color: '#C75746', bcolor: '#790586' }
-    '15-64': { icon: 'icons/EC.svg', color: '#C75746', bcolor: '#790586' }
-    '16': { icon: 'icons/unknown.svg', color: '#C75746', bcolor: '#790586' }
-    '16-65': { icon: 'icons/unknown.svg', color: '#C75746', bcolor: '#790586' }
+    { id: '1', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }}
+    { id: '1-1', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }}
+    { id: '2', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-2', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-3', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-4', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-5', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-6', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-7', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-8', data: { icon: 'icons/research.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-9', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '2-10', data: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }}
+    { id: '3', data: { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }}
+    { id: '3-11', data: { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }}
+    { id: '4', data: { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '4-12', data: { icon: 'icons/pre-school.svg', color: '#C75746', bcolor: '#4E6D00' }}
+    { id: '4-13', data: { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#4E6D00' }}
+    { id: '5', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03' }}
+    { id: '5-14', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03'  }}
+    { id: '5-15', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03'  }}
+    { id: '5-16', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-17', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-18', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-19', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-20', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-21', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-22', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-23', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-24', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-25', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '5-26', data: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '6', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '6-27', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '6-28', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '6-29', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '6-30', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '6-31', data: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }}
+    { id: '7', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '7-32', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '7-33', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '7-34', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '7-35', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '7-36', data: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }}
+    { id: '8', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-37', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-38', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-39', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-40', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-41', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-42', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-43', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '8-44', data: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }}
+    { id: '9', data: { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '9-45', data: { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '9-46', data: { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }}
+    { id: '10', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '10-47', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '10-48', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '10-49', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '10-50', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '10-51', data: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '11', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '11-52', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '11-53', data: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '12', data: { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '12-54', data: { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-55', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-56', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-57', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-58', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-59', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-60', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-61', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '13-62', data: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '14', data: { icon: 'icons/money.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '14-63', data: { icon: 'icons/money.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '15', data: { icon: 'icons/EC.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '15-64', data: { icon: 'icons/EC.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '16', data: { icon: 'icons/unknown.svg', color: '#C75746', bcolor: '#790586' }}
+    { id: '16-65', data: { icon: 'icons/unknown.svg', color: '#C75746', bcolor: '#790586' }}
