--- a/_data/fiscalyears.yml
+++ b/_data/fiscalyears.yml
@@ -1,6 +1,8 @@
 - ad: '2015'
   jc: '平成 27 年度'
   selected: selected
+  url: 'http://www.city.kawasaki.jp/230/page/0000064929.html'
 - ad: '2014'
   jc: '平成 26 年度'
   selected:
+  url: 'http://www.city.kawasaki.jp/230/page/0000055274.html'
