--- a/_data/categorytypes.yml
+++ b/_data/categorytypes.yml
@@ -4,19 +4,19 @@
   drilldowns: ['Category']
   breakdown: 'Category'
   cofogs:
-    - { id: '1', image: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#935B3B' }, data: '保険・医療・福祉の充実に' }
-    - { id: '2', image: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#0AB971' }, data: '子育ての支援に' }
-    - { id: '3', image: { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#4E6D00' }, data: '道路・公園緑地・河川・下水道の整備と安全なまちづくりに' }
-    - { id: '4', image: { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#D33673' }, data: '学校教育と生涯教育に' }
-    - { id: '5', image: { icon: 'icons/social-systems.svg', color: '#C75746', bcolor: '#2A3A03' }, data: '計画的なまちづくりに' }
+    - { id: '1', image: { icon: 'icons/helping-others.svg', color: '#C75746', bcolor: '#935B3B' }, data: '保険・医療・福祉の充実に' }
+    - { id: '2', image: { icon: 'icons/schools.svg', color: '#C75746', bcolor: '#0AB971' }, data: '子育ての支援に' }
+    - { id: '3', image: { icon: 'icons/street-lights.svg', color: '#C75746', bcolor: '#4E6D00' }, data: '道路・公園緑地・河川・下水道の整備と安全なまちづくりに' }
+    - { id: '4', image: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#D33673' }, data: '学校教育と生涯教育に' }
+    - { id: '5', image: { icon: 'icons/our-streets.svg', color: '#C75746', bcolor: '#2A3A03' }, data: '計画的なまちづくりに' }
     - { id: '6', image: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#EC2406' }, data: '行政運営に' }
-    - { id: '7', image: { icon: 'icons/economic-aid.svg', color: '#C75746', bcolor: '#938626' }, data: '地域経済の発展に' }
-    - { id: '8', image: { icon: 'icons/transport.svg', color: '#C75746', bcolor: '#C75746' }, data: '環境・リサイクルに' }
-    - { id: '9', image: { icon: 'icons/anchor.svg', color: '#C75746', bcolor: '#D33673' }, data: '区政の振興に' }
-    - { id: '10', image: { icon: 'icons/housing.svg', color: '#C75746', bcolor: '#790586' }, data: '港湾の整理に' }
-    - { id: '11', image: { icon: 'icons/admin.svg', color: '#C75746', bcolor: '#790586' }, data: '共生と参加のまちづくりに' }
-    - { id: '12', image: { icon: 'icons/fire-brigade.svg', color: '#C75746', bcolor: '#790586' }, data: '交通・水道の経営安定に' }
-    - { id: '13', image: { icon: 'icons/education.svg', color: '#C75746', bcolor: '#790586' }, data: 'その他' }
+    - { id: '7', image: { icon: 'icons/economy-tourism.svg', color: '#C75746', bcolor: '#938626' }, data: '地域経済の発展に' }
+    - { id: '8', image: { icon: 'icons/environment.svg', color: '#C75746', bcolor: '#C75746' }, data: '環境・リサイクルに' }
+    - { id: '9', image: { icon: 'icons/government.svg', color: '#C75746', bcolor: '#D33673' }, data: '区政の振興に' }
+    - { id: '10', image: { icon: 'icons/harbor.svg', color: '#C75746', bcolor: '#790586' }, data: '港湾の整理に' }
+    - { id: '11', image: { icon: 'icons/civilian-action.svg', color: '#C75746', bcolor: '#790586' }, data: '共生と参加のまちづくりに' }
+    - { id: '12', image: { icon: 'icons/traffic-watersup.svg', color: '#C75746', bcolor: '#790586' }, data: '交通・水道の経営安定に' }
+    - { id: '13', image: { icon: 'icons/publicaffairs.svg', color: '#C75746', bcolor: '#790586' }, data: 'その他' }
 - id: kanagawaken_kawasakishi_budget
   text: '款・項（財政法上の分類）'
   selected:
